<resources>
    <string name="app_name">blaz-HabitTracker</string>

    <!-- Main Activity -->
    <string name="title_main">Today</string>
    <string name="incompleteHabits">Incomplete Habits</string>
    <string name="completeHabits">Completed Habits</string>
    <string name="addHabit">Add</string>
    <string name="see_all_habits">See All</string>

    <!-- Add Habit Activity -->
    <string name="title_add_habit">Add Habit</string>
    <string name="save">Save</string>
    <string name="habitName">Habit Name</string>
    <string name="habitDate">Date</string>
    <string name="habitDays">Days</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tues">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thurs">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>

    <!-- All Habits Activity -->
    <string name="title_all_habits">All Habits</string>
    <string name="action_all_habits">View All Habits</string>

    <!-- Pop Up Menu -->
    <string name="popup_string_delete">Delete</string>
    <string name="popup_string_comp">See Completions</string>

    <!-- Completions Activity -->
    <string name="title_completions">Completions</string>



</resources>
