<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.habittracker.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/habitName" />

            <EditText
                android:id="@+id/habitName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/habitDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/habitDate"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="30dp"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <RadioButton android:id="@+id/radio_sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sun"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_mon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mon"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_tues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tues"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_wed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wed"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_thurs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thurs"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_fri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fri"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_sat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sat"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>


        </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sa"
        android:id="@+id/button"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
